--- a/hamming-distance.cabal
+++ b/hamming-distance.cabal
@@ -4,16 +4,16 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: a5eb904920c2952934b7bc0dd2219ef4733972c9fac9488c49e21973acdc7cb0
+-- hash: 4c6e6295a7e06cd6b9156d65057844fea1f56787349819bc4dca642e2ced910d
 
 name:           hamming-distance
 version:        0.1.0.0
 description:    Please see the README on GitHub at <https://github.com/githubuser/hamming-distance#readme>
 homepage:       https://github.com/githubuser/hamming-distance#readme
 bug-reports:    https://github.com/githubuser/hamming-distance/issues
-author:         Author name here
-maintainer:     example@example.com
-copyright:      2020 Author name here
+author:         Pascal Vaudrevange
+maintainer:     pascal@vaudrevange.com
+copyright:      2020 Pascal Vaudrevange
 license:        BSD3
 license-file:   LICENSE
 build-type:     Simple
@@ -27,6 +27,7 @@ source-repository head
 library
   exposed-modules:
       HammingDistance
+      RandomStrings
   other-modules:
       Paths_hamming_distance
   hs-source-dirs:
@@ -34,6 +35,10 @@ library
   build-depends:
       base >=4.7 && <5
     , bytestring
+    , extra
+    , random
+    , string-random
+    , text-conversions
     , utf8-string
   default-language: Haskell2010
 
@@ -47,7 +52,11 @@ executable hamming-distance-exe
   build-depends:
       base >=4.7 && <5
     , bytestring
+    , extra
     , hamming-distance
+    , random
+    , string-random
+    , text-conversions
     , utf8-string
   default-language: Haskell2010
 
@@ -63,6 +72,10 @@ test-suite hamming-distance-test
       HUnit
     , base >=4.7 && <5
     , bytestring
+    , extra
     , hamming-distance
+    , random
+    , string-random
+    , text-conversions
     , utf8-string
   default-language: Haskell2010
